--- a/thesis-ex.bib
+++ b/thesis-ex.bib
@@ -1,3 +1,22 @@
+@article{LaRosa:2016nbd,
+      author         = "La Rosa, Alessandro",
+      title          = "{The ATLAS Insertable B-Layer: from construction to
+                        operation}",
+      booktitle      = "{Proceedings, 8th International Workshop on Semiconductor
+                        Pixel Detectors for Particles and Imaging (PIXEL 2016):
+                        Sestri Levante, Italy, September 5-9, 2016}",
+      journal        = "JINST",
+      volume         = "11",
+      year           = "2016",
+      number         = "12",
+      pages          = "C12036",
+      doi            = "10.1088/1748-0221/11/12/C12036",
+      eprint         = "1610.01994",
+      archivePrefix  = "arXiv",
+      primaryClass   = "physics.ins-det",
+      SLACcitation   = "%%CITATION = ARXIV:1610.01994;%%"
+}
+
 @article{Aaboud:2016yuq,
       author         = "Aaboud, Morad and others",
       title          = "{Measurement of the photon identification efficiencies
